# qontinui-finetune

./: .gitignore  .pre-commit-config.yaml  AGENT_HANDOFF.md  README.md  RESEARCH.md  pyproject.toml  requirements.txt
data/: README.md
docs/: dataset-creation.md  deployment.md  model-selection.md  training-guide.md
models/configs/: data_template.yaml  training_config.yaml  yolov8_gui_detection.yaml
notebooks/: 01_data_exploration.ipynb  02_training.ipynb  03_evaluation.ipynb
prm/: __init__.py  dataset.py  infer.py  model.py  train.py
qontinui_finetune/: __init__.py  correction_loop_daemon.py  redact.py
qontinui_finetune/evaluation/: __init__.py  few_shot.py
reference/: README.md
scripts/: README.md  correction_loop_daemon.py  evaluate.py  export.py  export_corrections_to_vlm_sft.py  finetune_grounding_lora.py  finetune_grounding_rl.py  inference.py  patch_merged_for_vllm.py  prepare_dataset.py  train.py
state_detection/: README.md  __init__.py
tests/: conftest.py  test_correction_loop_daemon.py  test_export_corrections.py  test_redact.py
tests/prm/: test_dataset.py  test_infer.py
tests/scripts/: test_finetune_grounding_rl_cli.py
