[tool.poetry]
name = "qontinui-finetune"
version = "0.1.0"
description = "Model fine-tuning infrastructure for Qontinui"
authors = ["Joshua Spinak <jspinak@hotmail.com>"]
readme = "README.md"
packages = [{include = "qontinui_finetune", from = "."}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14.1 || >3.14.1,<3.15"
torch = "^2.2"
torchvision = "^0.26"
transformers = "^5.0"
peft = "^0.18"
datasets = ">=3.0,<5.0"
bitsandbytes = ">=0.46.1,<0.50"
qwen-vl-utils = "^0.0.8"
accelerate = "^1.0"
# trl >=0.15 required for GRPOTrainer (scripts/finetune_grounding_rl.py);
# we pin ^0.18 to track the stable API surface used by the RL polish stage.
trl = "^0.18"
qontinui = {path = "../qontinui", develop = true}
qontinui-train = {path = "../qontinui-train", develop = true}
qontinui-schemas = {path = "../qontinui-schemas", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
ruff = "^0.14"
mypy = "^1.14"
pre-commit = "^4.4"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.per-file-ignores]
# E402: Module level import not at top of file - acceptable in notebooks
"notebooks/*.ipynb" = ["E402"]
